--- a/styles/sections.css
+++ b/styles/sections.css
@@ -1,5 +1,16 @@
 #featured{
-    height: 100%;
     object-fit: cover;
+}
+
+.card{
     border-radius: 4px;
+    overflow: hidden;
+    position: relative;
+
+    &::before{
+        content: "";
+        position: absolute;
+        inset: 0;
+        background: linear-gradient(180deg, transparent 0%, #020617 100%);
+    }
 }
