--- a/styles/global.css
+++ b/styles/global.css
@@ -1,17 +1,18 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-:root{
+:root {
     --brand-color-light: #60A5FA;
     --brand-color-dark: #1D4ED8;
     --bg-color: #0F172A;
     --stroke-color: #1E293B;
     --text-color-primary: #F1F5F9;
     --text-color-secondary: #CBD5E1;
-    --font-family: "Archivo", sans-serif;
+
+    --font-family: 'Archivo', sans-serif;
     --h1: 800 24px/135% var(--font-family);
     --h2: 800 16px/140% var(--font-family);
     --h3: 800 14px/140% var(--font-family);
@@ -20,41 +21,42 @@
     --text-sm: 400 14px/160% var(--font-family);
 }
 
-body{
+body {
     font: var(--text);
     color: var(--text-color-primary);
     background-color: var(--bg-color);
 }
 
-a{
+a {
     text-decoration: none;
     color: inherit;
 }
 
-a:hover{
+a:hover {
     color: var(--brand-color-light);
 }
 
-h1, h2, h3{
+h1,
+h2,
+h3 {
     font: inherit;
 }
 
-
-img{
+img {
     max-width: 100%;
 }
 
-.container{
+.container {
     max-width: 1280px;
     padding-inline: 32px;
     margin-inline: auto;
 }
 
-main{
-    margin-top: 40px;
+main {
+    margin-block: 40px;
 }
 
-.content-tag{
+.content-tag {
     display: inline-block;
     background-color: var(--brand-color-dark);
     padding: 4px 8px;
@@ -63,5 +65,5 @@ main{
     text-transform: uppercase;
     letter-spacing: 0.04em;
     color: var(--text-color-primary);
-    box-shadow: 0 4px 16px rgba(2, 6, 23, 0.251);
-}
+    box-shadow: 0px 4px 16px rgba(2, 6, 23, 0.251);
+  }
