--- a/styles/utility.css
+++ b/styles/utility.css
@@ -1,32 +1,32 @@
-.grid{
+/* utility-first */
+.grid {
     display: grid;
 }
 
-.grid-flow-col{
+.grid-flow-col {
     grid-auto-flow: column;
-
 }
 
-.grid-cols-2{
+.grid-cols-2 {
     grid-template-columns: 1fr 1fr;
 }
 
-.gap-16{
+.gap-16 {
     gap: 16px;
 }
 
-.txt-2xl{
+.text-2xl {
     font: var(--h1);
 }
 
-.txt-xl{
+.text-xl {
     font: var(--h2);
 }
 
-.txt-lg{
+.text-lg {
     font: var(--h3);
 }
 
-.txt-sm{
+.text-sm {
     font: var(--text-sm);
 }
