--- a/styles/sections.css
+++ b/styles/sections.css
@@ -20,13 +20,16 @@ section header {
     }
 }
 
+
 #featured {
+    grid-area: featured;
+
     img {
         height: 100%;
         object-fit: cover;
     }
 
-.card {
+    .card {
         border-radius: 4px;
         overflow: hidden;
         position: relative;
@@ -59,6 +62,7 @@ section header {
 }
 
 #weekly {
+    grid-area: weekly;
 
     &>div {
         grid-template-columns: repeat(4, 292px);
@@ -83,3 +87,35 @@ section header {
         }
     }
 }
+
+#ai {
+    grid-area: ai;
+
+    img {
+        width: 176px;
+        aspect-ratio: 1/1;
+        object-fit: cover;
+    }
+
+    h3 {
+        margin-block: 8px 4px;
+    }
+}
+
+aside {
+    grid-area: aside;
+}
+
+#more {
+    margin-top: 32px;
+  
+    h3 {
+      margin-top: 8px;
+    }
+  
+    img {
+      width: 72px;
+      aspect-ratio: 1/1;
+      object-fit: cover;
+    }
+  }
